--- a/src/AuctionService/appsettings.Development.json
+++ b/src/AuctionService/appsettings.Development.json
@@ -2,12 +2,10 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Information"
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost:5432;User Id=postgres;Password=postgrespw;Database=auctions",
-  },
-
-  "DefaultConnection": "Host=localhost;Port=5432;Database=auctions;Username=postgres;Password=postgrespw"
+    "DefaultConnection": "Server=localhost:5432;User Id=postgres;Password=postgrespw;Database=auctions"
+  }
 }
